--- a/Project2_UserClient/pom.xml
+++ b/Project2_UserClient/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>Project2_UserClient</name>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Project2_Connector</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
