--- a/Project2_ClientUser/pom.xml
+++ b/Project2_ClientUser/pom.xml
@@ -26,10 +26,21 @@
             <artifactId>icepdf-viewer</artifactId>
             <version>6.2.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.media/jai_core -->
+<dependency>
+    <groupId>javax.media</groupId>
+    <artifactId>jai_core</artifactId>
+    <version>1.1.3</version>
+</dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE124</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>10</maven.compiler.source>
-        <maven.compiler.target>10</maven.compiler.target>
+        <maven.compiler.source>12</maven.compiler.source>
+        <maven.compiler.target>12</maven.compiler.target>
     </properties>
 </project>
